--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,6 +6,7 @@ name: Node.js CI
 on:
   push:
     branches: [ "master" ]
+    tags: ['v*.*.*']
   pull_request:
     branches: [ "master" ]
 
@@ -32,7 +33,7 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
     steps:
     - name: Use GitHub Release Action
       uses: softprops/action-gh-release@v1
