--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,10 +36,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Release
-      uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')
+    - name: Prepare artifact
+      run: echo "strDate=$(TZ=UTC-8 date +%Y-%m-%d)" >> $GITHUB_ENV
+    - name: Upload release asset
+      uses: svenstaro/upload-release-action@v2
       with:
-        files: xiaoxiao_auto_practicet.zip
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ./xiaoxiao_auto_practice.zip
+        tag: ${{env.strDate}}
+        file_glob: true
+        overwrite: true
+        release_name: ${{env.strDate}} 自动发布
 
 
