更新构建命名规则

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - name: Prepare artifact
-      run: echo "strDate=$(TZ=UTC-8 date +%Y-%m-%d)" >> $GITHUB_ENV
+      run: echo "strDate=$(TZ=UTC-8 date +%Y-%m-%d,%H:%M:%S)" >> $GITHUB_ENV
     - name: Upload release asset
       uses: svenstaro/upload-release-action@v2
       with:
